# inventory_agent

./: .env  pyproject.toml
src/inventory_agent/: __init__.py  inventory.py
